# survey-builder-agent

./: .env.example  .gitignore  BENCH.md  DESIGN.md  README-MCP.md  README.md  VERIFY.md  conftest.py  pyproject.toml
data/: handbook_index.json
evals/: EVAL_REPORT.md  ITERATION.md  REPORT-real-v4flash-baseline.md  REPORT-real-v4flash-round2.md  REPORT.md  __init__.py  graders.py  runner.py  script_builder.py
evals/cases/: 01_single_list_surveys_en.json  02_single_draft_only_zh.json  03_single_share_link_after_create_en.json  04_single_list_draft_surveys_zh.json  05_single_update_title_zh.json  06_single_add_post_then_list_en.json  07_bilingual_ab_xhs_zh.json  08_minimal_en_single.json  09_trilingual_instagram_zh.json  10_facebook_three_groups_en.json  11_bluesky_free_text_zh.json  12_douyin_rating_en.json  13_truth_social_two_questions_zh.json  14_mixed_lang_instagram_ab.json  15_three_posts_varied_questions_en.json  16_korean_comments_multiple_choice_zh.json  17_five_languages_en.json  18_group_overrides_three_groups_zh.json  19_query_then_build_en.json  20_verify_before_publish_en.json  21_ambiguous_bilingual_default_zh.json  22_ambiguous_ab_group_count_en.json  23_ambiguous_platform_unspecified_zh.json  24_ambiguous_post_count_en.json  (+15 more)
scripts/: build_handbook_index.py  demo.sh  mcp_smoke.py
tests/: test_build_handbook_index.py  test_chunker.py  test_config.py  test_executor.py  test_graders.py  test_handbook_tool.py  test_http_client.py  test_loop_mock.py  test_model_real.py  test_tools_content.py  test_tools_schema.py  test_tools_survey.py  test_trace.py
(+22 files in other folders)
