[project]
name = "survey-agent"
version = "0.1.0"
description = "Survey Builder Agent — turns a natural-language instruction into a published cs14 survey via tool-calling."
authors = [
    { name = "zhijie ma", email = "zhijiema6@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "mcp[cli]>=1.28.1",
    "python-dotenv>=1.0.0",
]

[project.scripts]
survey-agent = "survey_agent.cli:main"
survey-agent-mcp = "survey_agent.mcp_server:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
